# ambient-benchmark

./: Cargo.toml
benchmark/: Cargo.toml  ambient.toml
benchmark/src/: client.rs  server.rs
input_lag_visualisation/: Cargo.toml  README.md  ambient.toml
input_lag_visualisation/src/: client.rs  server.rs
load/balls/: Cargo.toml  ambient.toml
load/balls/src/: client.rs
measure/frame_time/: Cargo.toml  ambient.toml
measure/frame_time/src/: client.rs  server.rs  shared.rs
measure/input_lag/: ambient.toml
measure/input_lag/src/: client.rs
